5156
Since r23222 this is a compiler error:
{code}
test.scala:3: error: super constructor cannot be passed a self reference unless parameter is declared by-name
object ChildType extends ParentType(ChildType.something) {
                 ^
one error found
{code}

Paul can you comment if this is intended for this ticket as well (and close the bug) or reassign to the meeting, please?
